create enum Gender, modify Customer and test classes